# irc-client

./: .gitignore  CMakeLists.txt  Changelog  LICENSE  Makefile  README.md  TODO.txt
scripts/: responses.lua
src/: CMakeLists.txt  MainLoop.cpp  MainLoop.hpp  args.cpp  args.hpp  client.cpp  command_responses.c  command_responses.cpp  command_responses.h  commands.h  config.hpp.in  data.c  data.cpp  data.h  gui.h  irc_string.c  irc_string.h  logging.h  main.c  main.cpp  net.c  net.h  queue.c  queue.h  socket.cpp  socket.h
src/frontends/: CMakeLists.txt  Frontend.hpp
src/frontends/frontend-ncurses/: CMakeLists.txt
src/frontends/frontend-ncurses/backend/: Backend.cpp  Backend.hpp  CMakeLists.txt  Channel.cpp  Channel.hpp  Interactions.cpp  Interactions.hpp
src/frontends/frontend-ncurses/frontend/: CMakeLists.txt  Frontend.hpp  FrontendNCurses.cpp  MessageHandler.cpp  MessageHandler.hpp
src/frontends/frontend-ncurses/handler-lua/: CMakeLists.txt  LuaBackend.cpp  LuaBackend.hpp  LuaChannel.cpp  LuaChannel.hpp  LuaInteractions.cpp  LuaInteractions.hpp  LuaMessage.cpp  LuaMessage.hpp
src/frontends/frontend-terminal/: CMakeLists.txt  FrontendTerminal.cpp
src/frontends/frontend-terminal/frontend/: Frontend.hpp
src/gui/: curses.c  curses.cpp  term.c
src/irc/: CMakeLists.txt  IRCClient.cpp  Message.cpp
src/irc/irc/: IRCClient.hpp  Message.hpp
src/util/: CMakeLists.txt  debug.cpp  sockets.cpp  strings.cpp
src/util/util/: Signal.hpp  debug.hpp  sockets.hpp  strings.hpp
